# calendar_sync

./: .env.icrc.example  .env.template  .gitignore  README.md  pyproject.toml  setup_config.py  start.bat  sync_config.yaml.example  test_browser_api.py  test_ews_auth.py  test_helvetia_read.py  test_intercept_owa.py
.claude/: settings.local.json
docs/: icrc_setup.md
src/calendar_sync/: __main__.py  config.py
src/calendar_sync/auth/: base.py  ews_auth.py  msal_auth.py  selenium_auth.py  token_cache.py
src/calendar_sync/models/: calendar.py  event.py
src/calendar_sync/readers/: base.py  ews_reader.py  ews_selenium_reader.py  m365_reader.py
src/calendar_sync/sync/: engine.py  strategies.py
src/calendar_sync/utils/: date_utils.py  exceptions.py  logging.py  ssl_utils.py
src/calendar_sync/writers/: base.py  m365_writer.py
